# polars-glob-ambiguity

./: Cargo.toml  README.md
src/: main.rs
