[package]
name = "polars-test"
version = "0.1.0"
edition = "2024"

[dependencies]
polars-plan = { version = "=0.48.1", features = [
    "bitwise",
    "temporal",
    "serde",
    "rolling_window",
    "rolling_window_by",
    "timezones",
    "dtype-date",
    "extract_groups",
    "dtype-datetime",
    "asof_join",
    "dtype-duration",
    "is_first_distinct",
    "pivot",
    "dtype-array",
    "is_last_distinct",
    "dtype-time",
    "array_any_all",
    "month_start",
    "month_end",
    "offset_by",
    "parquet",
    "strings",
    "row_hash",
    "json",
    "python",
    "cloud",
    "string_to_integer",
    "list_any_all",
    "pct_change",
    "list_gather",
    "list_filter",
    "dtype-i16",
    "round_series",
    "cutqcut",
    "async",
    "ewma",
    "ewma_by",
    "random",
    "chunked_ids",
    "repeat_by",
    "is_in",
    "log",
    "string_reverse",
    "list_sets",
    "propagate_nans",
    "mode",
    "rank",
    "hist",
    "object",
    "approx_unique",
    "dtype-categorical",
    "merge_sorted",
    "bigidx",
    "cov",
    "list_sample",
    "dtype-i8",
    "fused",
    "binary_encoding",
    "list_drop_nulls",
    "fmt",
    "list_to_struct",
    "string_pad",
    "diff",
    "rle",
    "is_unique",
    "find_many",
    "string_encoding",
    "ipc",
    "index_of",
    "search_sorted",
    "unique_counts",
    "dtype-u8",
    "dtype-struct",
    "peaks",
    "abs",
    "interpolate",
    "interpolate_by",
    "list_count",
    "cum_agg",
    "top_k",
    "moment",
    "semi_anti_join",
    "replace",
    "dtype-u16",
    "regex",
    "dtype-decimal",
    "arg_where",
    "business",
    "range",
    "meta",
    "hive_partitions",
    "concat_str",
    "coalesce",
    "dot_diagram",
    "trigonometry",
    "streaming",
    "true_div",
    "sign",
] }
